[gd_scene load_steps=4 format=2]

[ext_resource path="res://seleçãoDePersonagem.gd" type="Script" id=1]
[ext_resource path="res://assets/selecionarPersonagem.png" type="Texture" id=2]
[ext_resource path="res://assets/fundoCinza.png" type="Texture" id=3]

[node name="seleçãoDePersonagem" type="Node2D"]
script = ExtResource( 1 )

[node name="FundoCinza" type="Sprite" parent="."]
position = Vector2( 531, 316 )
texture = ExtResource( 3 )

[node name="personagemA" type="Button" parent="."]
margin_left = 362.0
margin_top = 200.0
margin_right = 460.0
margin_bottom = 331.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personagemB" type="Button" parent="."]
margin_left = 576.0
margin_top = 195.0
margin_right = 674.0
margin_bottom = 332.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personagemC" type="Button" parent="."]
margin_left = 356.0
margin_top = 397.0
margin_right = 461.0
margin_bottom = 531.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="personagemD" type="Button" parent="."]
margin_left = 575.0
margin_top = 394.0
margin_right = 672.0
margin_bottom = 532.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SelecionarPersonagem" type="Sprite" parent="."]
position = Vector2( 512, 350 )
scale = Vector2( 0.378151, 0.378151 )
texture = ExtResource( 2 )

[connection signal="pressed" from="personagemA" to="." method="_on_personagemA_pressed"]
[connection signal="pressed" from="personagemB" to="." method="_on_personagemB_pressed"]
[connection signal="pressed" from="personagemC" to="." method="_on_personagemC_pressed"]
[connection signal="pressed" from="personagemD" to="." method="_on_personagemD_pressed"]
